minor  design bug fixes-->overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
   margin-top: 10px;
 }
 .box {
-  background-color: steelblue;
+  background-color: fuchsia;
   color: #fff;
   display: flex;
   align-items: center;
@@ -35,13 +35,15 @@ body {
   margin: 10px;
   transform: translateX(400%);
   transition: transform 0.4s ease;
+  overflow-x: hidden;
 }
 .box:nth-of-type(even) {
   transform: translateX(-400%);
+  background-color: darkorchid;
 }
 .box.show {
   transform: translateX(0);
 }
 .box h2 {
-  font-size: 45px;
+  font-size: 35px;
 }
